--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aleustra</title>
+    <meta name="description" content="Desarrollador Frontend con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
+    <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, alexander ustra ">
+    <title>Alexander Ustra - Desarrollador Frontend y UX Designer</title>
   </head>
   <body>
     <div id="root"></div>
