--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="./public/imgs/logoPort.webp" type="image/webp">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Desarrollador Frontend con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
