--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Desarrollador Frontend con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
     <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, alexander ustra ">
-    <title>Alexander Ustra - Desarrollador Frontend y UX Designer</title>
+    <title>Alexander Ustra - Desarrollador Web y Diseñador UX</title>
   </head>
   <body>
     <div id="root"></div>
