--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Desarrollador Frontend con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
-    <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, alexander ustra ">
+    <meta name="description" content="Desarrollador Web con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
+    <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, freelancer">
     <title>Alexander Ustra - Desarrollador Web y Diseñador UX</title>
   </head>
   <body>
