--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="./public/imgs/logoPort.webp" type="image/webp">
+    <link rel="icon" href="/imgs/logoPort.webp" type="image/webp">
 
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Desarrollador Web con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
-    <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, freelancer">
-    <title>Alexander Ustra - Desarrollador Web y Diseñador UX</title>
+    <meta name="keywords" content="React, TypeScript, portafolio web, diseñador web, desarrollador web, uruguay, tacuarembo, montevideo, freelancer">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Alexander Ustra - Desarrollador Web en Tacuarembó">
+    <meta property="og:description" content="Portafolio de proyectos frontend con React y TypeScript. Basado en Tacuarembó.">
+    <meta property="og:image" content="https://aleustra.dev/imgs/logoPort.webp">
+    <meta property="og:url" content="https://aleustra.dev">
+    <meta property="og:type" content="website">
+
+    <title>Alexander Ustra - Desarrollador Web Frontend</title>
+    
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Alexander Ustra",
+        "jobTitle": "Desarrollador Web",
+        "url": "https://aleustra.dev",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Tacuarembó",
+          "addressCountry": "UY"
+        },
+        "knowsAbout": ["React", "TypeScript", "UX Design", "Desarrollo Web"],
+        "sameAs": ["https://www.linkedin.com/in/alexander-ustra"]
+      }
+    </script>
   </body>
 </html>
