--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
 
-    <meta name="robots" content="index, follow">
+    <!--<meta name="robots" content="index, follow"> -->
+    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Desarrollador Web con experiencia en React, TypeScript y diseño UX. Explora mi portafolio y proyectos destacados.">
